updated link styling

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     </p>
                 </div>
                 <div class="item">
-                    <h3>Library District Website (<a href="https://web.archive.org/web/20240229023523/http://informationplace.org/#">www.informationplace.org</a>)</h3>
+                    <h3>Library District Website (<a class="contact" href="https://web.archive.org/web/20240229023523/http://informationplace.org/#">www.informationplace.org</a>)</h3>
                     <p>
                         Developed and managed Pike County's six-branch library website using PHP, Laravel, and JavaScript for 5 years, handling development, content, partnerships, and project management.
                     </p>
