insert http:// to fix link

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         >prizecoffeecup@proton.me</a
                     >
                     | Phone: (276) 598-8978 | LinkedIn:
-                    <a href="linkedin.com/in/appaltech">linkedin.com/in/appaltech</a>
+                    <a href="http://linkedin.com/in/appaltech">linkedin.com/in/appaltech</a>
                 </p>
             </section>
             <section class="section">
