--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Roboto, sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 0;
@@ -84,66 +84,27 @@
                     <a href="mailto:prizecoffeecup@proton.me"
                         >prizecoffeecup@proton.me</a
                     >
-                    | Phone: (276) 598-8978 | LinkedIn:
+                    | Github: 
+                    <a href="https://github.com/rb-thompson">github.com/rb-thompson</a>
+                    | LinkedIn:
                     <a href="http://linkedin.com/in/appaltech">linkedin.com/in/appaltech</a>
                 </p>
             </section>
             <section class="section">
                 <h2>Summary</h2>
                 <p>
-                    Kentucky-based developer with a strong foundation in coding and exceptional problem solving skills.
-                    I have always loved people and technology. I excel at transforming complex problems into efficient solutions.
-                    Continuous learner, always sourcing new inspirations, and detail-oriented. 
-                    
+                    Foundational programmer with expertise in Python, Prompt Engineering, and Data Analysis, based
+                    through self-study, coursework, and an AI development bootcamp. Experienced in building data-driven
+                    tools and prototyping solutions. Eager to transition into a junior developer role, creating applications and
+                    scalable systems. 
                 </p>
             </section>
             <section class="section">
-                <h2>Work Experience</h2>
-                <div class="item">
-                    <h3>Assitant IT Coordinator - Pike County Public Library District (KY)</h3>
-                    <p>2019-2024</p>
-                    <p>
-                        Web developer, archiving (genealogy), research, teaching and outreach (digital literacy), 
-                        stem educator (3D printing and prototyping), broadcasting.
-                    </p>
-                </div>
-                <div class="item">
-                    <h3>Builder (General Masonry, Structural) - Rising Sun Development LLC</h3>
-                    <p>2016-2018</p>
-                    <p>
-                        General and applied masonry, project management, and equipment operator.
-                    </p>
-                </div>
-            </section>
-            <div class="section">
-                <h2>Education</h2>
-                <div class="item">
-                    <h3>CompSci & Systems Engineering - Coursera</h3>
-                    <p>2020-2024 (Certificates)</p>
-                </div>
-                <div class="item">
-                    <h3>Information Systems Engineering (ISE) - ANU</h3>
-                    <p>2011-2013 (A+ and Network+ Certication)</p>
-                </div>
-                <div class="item">
-                    <h3>Computer Science - BSCTC</h3>
-                    <p>2007-2009, 2023-2024</p>
-                </div>
-            </section>
-            <section class="section">
                 <h2>Skills</h2>
-                <div class="skills">
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>PHP Frameworks</li>
-                        <li>JavaScript</li>
-                        <li>SQL</li>
-                        <li>Python</li>
-                        <li>AI Tools</li>
-                        <li>Project Management</li>
-                    </ul>
-                </div>
+                <p>
+                    Technical: Python, JavaScript/Typescript, Rust, SQL, AI/ML, Git, DevOps, Data Visualization <br />
+                    Non-Technical: Community Engagement, Agile Development, Problem-Solving, Teamwork
+                </p>
             </section>
             <section class="section">
                 <h2>Projects</h2>
@@ -154,12 +115,48 @@
                     </p>
                 </div>
                 <div class="item">
-                    <h3>Library District Website (<a class="contact" href="https://web.archive.org/web/20240229023523/http://informationplace.org/#">www.informationplace.org</a>)</h3>
+                    <h3>Smart Finance Analyzer  (<a class="contact" href="github.com/rb-thompson/smart-finance-analyzer">github.com/rb-thompson/smart-finance-analyzer</a>)</h3>
                     <p>
-                        Developed and managed Pike County's six-branch library website using PHP, Laravel, and JavaScript for 5 years, handling development, content, partnerships, and project management.
+                        Developed a python-based tool to manage and analyze financial transactions, generating detailed reports with data visualization to support informed decisions.
                     </p>
                 </div>
             </section>
+            <div class="section">
+                <h2>Education</h2>
+                <div class="item">
+                    <h3>Code Kentucky</h3>
+                    <p>AI Development Bootcamp</p>
+                    <p>2024-2025 (Certificates)</p>
+                </div>
+                <div class="item">
+                    <h3>Big Sandy Community and Technical College, Pikeville, KY</h3>
+                    <p>Computer Science</p>
+                    <p>2007-2009, 2023-2024</p>
+                </div>
+                <div class="item">
+                    <h3>American National University, Pikeville, KY</h3>
+                    <p>Information Systems Engineering (ISE)</p>
+                    <p>2011-2013 (A+ and Network+ Certication)</p>
+                </div>
+            </section>
+            <section class="section">
+                <h2>Work History</h2>
+                <div class="item">
+                    <h3>Pike County Public Library, Pikeville, KY</h3>
+                    <p>Assitant IT Coordinator, 2019-2024</p>
+                    <p>
+                        Developed and maintained data-driven tools using various frameworks, enhancing library operations. Prototyped 3D printing solutions and led STEM workshops, reaching 500+ community members.
+                    </p>
+                </div>
+                <div class="item">
+                    <h3>Rising Sun Development LLC</h3>
+                    <p>Builder (General Masonry, Structural), 2015-2018</p>
+                    <p>
+                        Managed logistics for construction projects, optimizing resource allocation using data-driven planning. Collaborated with cross-functional teams to meet project deadlines.
+                    </p>
+                </div>
+            </section>
+
         </main>
     </body>
 </html>
