--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </p>
                 </div>
                 <div class="item">
-                    <h3>Smart Finance Analyzer  (<a class="contact" href="github.com/rb-thompson/smart-finance-analyzer">github.com/rb-thompson/smart-finance-analyzer</a>)</h3>
+                    <h3>Smart Finance Analyzer  (<a class="contact" href="https://github.com/rb-thompson/smart-finance-analyzer">github.com/rb-thompson/smart-finance-analyzer</a>)</h3>
                     <p>
                         Developed a python-based tool to manage and analyze financial transactions, generating detailed reports with data visualization to support informed decisions.
                     </p>
